RESOLVED FIXED308843
Fix UI control overlap when viewing narrow vertical video in element fullscreen on visionOS
https://bugs.webkit.org/show_bug.cgi?id=308843
Summary Fix UI control overlap when viewing narrow vertical video in element fullscre...
phinehas133
Reported 2026-02-27 12:30:34 PST
see title
Attachments
phinehas133
Comment 1 2026-02-27 12:30:36 PST
phinehas133
Comment 2 2026-02-27 12:34:29 PST
EWS
Comment 3 2026-03-02 16:49:02 PST
Committed 308494@main (fc34d2c7231c): <https://commits.webkit.org/308494@main> Reviewed commits have been landed. Closing PR #59604 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.