Fix UI control overlap when viewing narrow vertical video in element fullscreen on visionOS https://bugs.webkit.org/show_bug.cgi?id=308843 rdar://162804362

Reviewed by Andy Estes.

The fix makes the button(view immersive/view spatial) responsive to available space. When there is
sufficient width, the button displays centered with both symbol and text, maintaining a minimum
24pt spacing from the left-sidebuttons. When space is insufficient,the button switches to a compact
symbol-only variant aligned to the trailing edge.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController initWithWebView:]):
(-[WKFullScreenViewController _contentSizeCategoryDidChange:]):
(-[WKFullScreenViewController _setTopButtonLabel:]):
(-[WKFullScreenViewController _updateVideoButtonLayout]):
(-[WKFullScreenViewController configureEnvironmentPickerOrFullscreenVideoButtonView]):
(-[WKFullScreenViewController loadView]):

Canonical link: https://commits.webkit.org/308494@main